test/corpus/call_vs_group.txt
==================
Call vs Group
==================

[
  func
  (foo + bar)
]

---

(source_file
  (pair
    (list
      (pair
        (identifier)
        (pair
          (group
            (pair
              (binary_expression
                (identifier)
                (identifier)))))))))
