test/corpus/cat_string.txt
==================
Cat string
==================

x = ^_python
import sys
sys.exit(0)
_^

---

(source_file
  (pair
    (binary_expression
      (identifier)
      (const_value
        (cat_string
          (paragrapth_head))))))
