test/corpus/example.txt
==================
Example
==================

@ctx.map. {
  engine = JsonRpcEngine. {
    "hello" = @ctx.eff. {
      (Stream::$stdout).writeln. "Hello World!"
      (Stream::$stdout).writeln. "Really hello!"
      @return: json. {
        "ok" = @true
      }
    }
  }
}

---

(source_file
  (pair_tail
    (binary_expression
      (binary_expression
        (unary_expression
          (identifier))
        (identifier))
      (curly_list
        (binary_expression
          (identifier)
          (binary_expression
            (identifier)
            (curly_list
              (binary_expression
                (const_value
                  (const_string))
                (binary_expression
                  (binary_expression
                    (unary_expression
                      (identifier))
                    (identifier))
                  (curly_list
                    (binary_expression
                      (binary_expression
                        (group
                          (pair_tail
                            (binary_expression
                              (identifier)
                              (unary_expression
                                (identifier)))))
                        (identifier))
                      (const_value
                        (const_string)))
                    (binary_expression
                      (binary_expression
                        (group
                          (pair_tail
                            (binary_expression
                              (identifier)
                              (unary_expression
                                (identifier)))))
                        (identifier))
                      (const_value
                        (const_string)))
                    (binary_expression
                      (unary_expression
                        (identifier))
                      (binary_expression
                        (identifier)
                        (curly_list
                          (binary_expression
                            (const_value
                              (const_string))
                            (unary_expression
                              (identifier))))))))))))))))
