test/corpus/group.txt
==================
Group - single element
==================

(a)

---

(source_file
  (pair
    (group
      (pair
        (identifier)))))

==================
Group - pair
==================

(a b)

---

(source_file
  (pair
    (group
      (pair
        (identifier)
        (pair
          (identifier))))))

==================
Group - recursive triple
==================

(a b c)

---

(source_file
  (pair
    (group
      (pair
        (identifier)
        (pair
          (identifier)
          (pair
            (identifier)))))))

==================
Group - recursive quadruple
==================

(a b c d)

---

(source_file
  (pair
    (group
      (pair
        (identifier)
        (pair
          (identifier)
          (pair
            (identifier)
            (pair
              (identifier))))))))

==================
Group - nested groups
==================

(a (b c) d)

---

(source_file
  (pair
    (group
      (pair
        (identifier)
        (pair
          (group
            (pair
              (identifier)
              (pair
                (identifier))))
          (pair
            (identifier)))))))
