test/corpus/list.txt
==================
List
==================

[1 2 3]
---

(source_file
  (pair_tail
    (list
      (const_value
        (const_number))
      (const_value
        (const_number))
      (const_value
        (const_number)))))
