test/corpus/map.txt
==================
Map
==================

@ctx.map. {
  main = one + two
  one = 1
  two = 2
}

---

(source_file
  (pair
    (binary_expression
      (binary_expression
        (unary_expression
          (identifier))
        (identifier))
      (curly_list
        (pair
          (binary_expression
            (identifier)
            (binary_expression
              (identifier)
              (identifier)))
          (pair
            (binary_expression
              (identifier)
              (const_value
                (const_number)))
            (pair
              (binary_expression
                (identifier)
                (const_value
                  (const_number))))))))))
