test/corpus/paragraph.txt
==================
Paragraph
==================

x = ,,,python
import sys
sys.exit(0)
,,,

---

(source_file
  (pair_tail
    (binary_expression
      (identifier)
      (const_value
        (paragrapth
          (paragrapth_head)
          (paragrapth_content)
          (paragrapth_content))))))
