test/corpus/path_vs_identifier.txt
==================
Path vs Identifier - should be fixed in future
==================

ident/ident
ident./path
---

(source_file
  (pair_tail
    (identifier)
    (pair_tail
      (path)
      (pair_tail
        (identifier)
        (pair_tail
          (path))))))
