test/corpus/paths.txt
==================
Paths
==================

relative = ./some/path
absolutre = /home/user/file.txt

func. ./a/b/c
func. /a/b/c

abra/cadabra / ./boom

---

(source_file
  (pair
    (binary_expression
      (identifier)
      (path))
    (pair
      (binary_expression
        (identifier)
        (path))
      (pair
        (binary_expression
          (identifier)
          (path))
        (pair
          (binary_expression
            (identifier)
            (path))
          (pair
            (identifier)
            (pair
              (binary_expression
                (path)
                (path)))))))))
