test/corpus/pipe.txt
==================
Pipe
==================

\@pipe a b c|

\@seq a b c|

---

(source_file
  (pipe
    (unary_expression
      (identifier))
    (identifier)
    (identifier)
    (identifier))
  (pipe
    (unary_expression
      (identifier))
    (identifier)
    (identifier)
    (identifier)))
