test/corpus/plus_op.txt
==================
Plus Operator
==================

1 + 2 + 3

---

(source_file
  (pair
    (binary_expression
      (binary_expression
        (const_value
          (const_number))
        (const_value
          (const_number)))
      (const_value
        (const_number)))))
