test/corpus/top_level_repeat.txt
==================
Top Level Repeat
==================

x = a + b
a = 10
b = 15
---

(source_file
  (pair_tail
    (binary_expression
      (identifier)
      (binary_expression
        (identifier)
        (identifier)))
    (pair_tail
      (binary_expression
        (identifier)
        (const_value
          (const_number)))
      (pair_tail
        (binary_expression
          (identifier)
          (const_value
            (const_number)))))))
